// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Patterns/Horizontal Navigation Horizontal Navigation Text And Icon 1`] = `
<div
  style="height: 200px;"
>
  

  <div
    class="fd-tool-header"
  >
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <img
          alt="SAP"
          class="fd-tool-header__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <h4
          class="fd-title fd-title--h5 fd-tool-header__title"
        >
          Product Name
        </h4>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <label
          class="fd-form-label fd-tool-header__label"
          for="input-1"
        >
          Second Title
        </label>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="search"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--search"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="task"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--circle-task"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="notification"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--bell"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="user menu control"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    class="fd-icon-tab-bar fd-icon-tab-bar--navigation fd-icon-tab-bar--sm"
  >
    
    
    <ul
      class="fd-icon-tab-bar__header"
      role="tablist"
    >
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#"
          id="tab7"
          role="tab"
        >
          
                
          <div
            class="fd-icon-tab-bar__tab-container"
          >
            
                    
            <i
              class="sap-icon--home"
            />
            
                    
            <span
              class="fd-icon-tab-bar__tag"
            >
              Section 1
            </span>
            
                
          </div>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item fd-icon-tab-bar__item--single-click"
        role="presentation"
      >
        
            
        <div
          class="fd-popover"
        >
          
                
          <div
            class="fd-popover__control"
          >
            
                    
            <a
              aria-controls="popoverA3"
              aria-expanded="true"
              aria-haspopup="true"
              aria-selected="true"
              class="fd-icon-tab-bar__tab"
              id="tab8"
              onclick="onPopoverClick('popoverA3');"
              role="tab"
              tabindex="0"
            >
              
                    
              <div
                class="fd-icon-tab-bar__tab-container"
              >
                
                        
                <i
                  class="sap-icon--internet-browser"
                  role="presentation"
                />
                
                        
                <span
                  class="fd-icon-tab-bar__tag"
                >
                  Section 2
                </span>
                
                        
                <span
                  class="fd-icon-tab-bar__arrow"
                >
                  
                            
                  <i
                    class="sap-icon--slim-arrow-down"
                    role="presentation"
                  />
                  
                        
                </span>
                
                    
              </div>
              
                    
            </a>
            
                
          </div>
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right fd-icon-tab-bar__popover-body"
            id="popoverA3"
          >
            
                    
            <ul
              class="fd-list fd-list--navigation fd-list--no-border fd-icon-tab-bar__list"
              role="list"
            >
              
                        
              <li
                aria-level="1"
                class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                role="listitem"
                tabindex="-1"
              >
                
                            
                <a
                  class="fd-list__link"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-list__title"
                  >
                    Subsection 1
                  </span>
                  
                            
                </a>
                
                        
              </li>
              
                        
              <li
                aria-level="2"
                class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                role="listitem"
                tabindex="-1"
              >
                
                            
                <a
                  class="fd-list__link"
                  tabindex="0"
                >
                  
                            
                  <span
                    class="fd-list__title"
                  >
                    Subsection 1.1
                  </span>
                  
                            
                </a>
                
                        
              </li>
              
                    
            </ul>
            
                
          </div>
          
            
        </div>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#"
          id="tab9"
          role="tab"
        >
          
                
          <div
            class="fd-icon-tab-bar__tab-container"
          >
            
                    
            <i
              class="sap-icon--home-share"
            />
            
                    
            <span
              class="fd-icon-tab-bar__tag"
            >
              Section 3
            </span>
            
                
          </div>
          
            
        </a>
        
        
      </li>
      
    
    </ul>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Horizontal Navigation Horizontal Navigation Text And Icon Phone View 1`] = `
<div
  style="height: 200px;"
>
  


  <div
    style="height: 200px;"
  >
    
  
    <div
      class="fd-tool-header fd-tool-header--sm"
      style="max-width: 500px;"
    >
      
    
      <div
        class="fd-tool-header__group"
      >
        
      
        <div
          class="fd-tool-header__element"
        >
          
        
          <img
            alt="SAP"
            class="fd-tool-header__logo"
            src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
            srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
          />
          
      
        </div>
        
      
        <div
          class="fd-tool-header__element"
        >
          
        
          <h4
            class="fd-title fd-title--h5 fd-tool-header__title"
          >
            Product Name
          </h4>
          
      
        </div>
        
    
      </div>
      
    
      <div
        class="fd-tool-header__group"
      >
        
      
        <div
          class="fd-tool-header__element"
        >
          
        
          <button
            aria-label="more items"
            class="fd-button fd-button--transparent fd-tool-header__button"
          >
            
          
            <i
              class="sap-icon--overflow"
            />
            
        
          </button>
          
      
        </div>
        
      
        <div
          class="fd-tool-header__element"
        >
          
        
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
            role="img"
            style="background-image: url('/assets/images/avatars/1.svg')"
          />
          
      
        </div>
        
    
      </div>
      

    </div>
    

    <div
      class="fd-icon-tab-bar fd-icon-tab-bar--navigation fd-icon-tab-bar--sm"
      style="max-width: 500px;"
    >
      
    
      <ul
        class="fd-icon-tab-bar__header"
        role="tablist"
      >
        
        
        <li
          class="fd-icon-tab-bar__item"
          role="presentation"
        >
          
            
          <a
            class="fd-icon-tab-bar__tab"
            href="#"
            id="tab10"
            role="tab"
          >
            
                
            <div
              class="fd-icon-tab-bar__tab-container"
            >
              
                    
              <i
                class="sap-icon--home"
              />
              
                    
              <span
                class="fd-icon-tab-bar__tag"
              >
                Section 1
              </span>
              
                
            </div>
            
            
          </a>
          
        
        </li>
        
        
        <li
          class="fd-icon-tab-bar__item fd-icon-tab-bar__item--multi-click"
          role="presentation"
        >
          
            
          <a
            aria-selected="true"
            class="fd-icon-tab-bar__tab"
            id="tab11"
            role="tab"
            tabindex="0"
          >
            
                
            <div
              class="fd-icon-tab-bar__tab-container"
            >
              
                    
              <i
                class="sap-icon--family-care"
              />
              
                    
              <span
                class="fd-icon-tab-bar__tag"
              >
                Section 2
              </span>
              
                
            </div>
            
            
          </a>
          
            
          <div
            class="fd-popover fd-icon-tab-bar__popover"
          >
            
                
            <div
              class="fd-popover__control"
            >
              
                    
              <div
                class="fd-icon-tab-bar__button-container"
              >
                
                    
                <button
                  aria-controls="popoverA4"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="open menu button"
                  class="fd-button fd-button--transparent fd-button--compact  fd-icon-tab-bar__button"
                  onclick="onPopoverClick('popoverA4');"
                >
                  
                        
                  <i
                    class="sap-icon--slim-arrow-down"
                  />
                  
                    
                </button>
                
                    
              </div>
              
                
            </div>
            
                
            <div
              aria-hidden="false"
              class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right fd-icon-tab-bar__popover-body"
              id="popoverA4"
            >
              
                    
              <ul
                class="fd-list fd-list--navigation fd-list--no-border fd-icon-tab-bar__list"
                role="list"
              >
                
                    
                <li
                  aria-level="1"
                  class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                  role="listitem"
                  tabindex="-1"
                >
                  
                        
                  <a
                    class="fd-list__link"
                    tabindex="0"
                  >
                    
                        
                    <span
                      class="fd-list__title"
                    >
                      Subsection 1
                    </span>
                    
                        
                  </a>
                  
                    
                </li>
                
                    
                <li
                  aria-level="1"
                  class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                  role="listitem"
                  tabindex="-1"
                >
                  
                        
                  <a
                    class="fd-list__link"
                    tabindex="0"
                  >
                    
                        
                    <span
                      class="fd-list__title"
                    >
                      Subsection 2
                    </span>
                    
                        
                  </a>
                  
                    
                </li>
                
                    
              </ul>
              
                
            </div>
            
            
          </div>
          
        
        </li>
        
        
        <li
          class="fd-icon-tab-bar__item"
          role="presentation"
        >
          
            
          <a
            class="fd-icon-tab-bar__tab"
            href="#"
            id="tab12"
            role="tab"
          >
            
                
            <div
              class="fd-icon-tab-bar__tab-container"
            >
              
                    
              <i
                class="sap-icon--monitor-payments"
              />
              
                    
              <span
                class="fd-icon-tab-bar__tag"
              >
                Section 3
              </span>
              
                
            </div>
            
            
          </a>
          
        
        </li>
        
        
        <li
          class="fd-icon-tab-bar__item fd-icon-tab-bar__item--overflow"
          role="presentation"
        >
          
        
          <div
            class="fd-popover fd-icon-tab-bar__popover"
          >
            
          
            <div
              class="fd-popover__control"
            >
              
            
              <button
                aria-controls="popoverA5"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="open menu button"
                class="fd-icon-tab-bar__overflow"
                onclick="onPopoverClick('popoverA5');"
              >
                
              
                <span
                  class="fd-icon-tab-bar__overflow-text"
                >
                  More
                </span>
                
              
                <i
                  class="sap-icon--slim-arrow-down"
                  role="presentation"
                />
                
            
              </button>
              
          
            </div>
            
          
            <div
              aria-hidden="false"
              class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right fd-icon-tab-bar__popover-body"
              id="popoverA5"
            >
              
            
              <ul
                class="fd-list fd-list--navigation fd-list--no-border fd-icon-tab-bar__list"
                role="list"
              >
                
              
                <li
                  aria-level="1"
                  class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                  role="listitem"
                  tabindex="-1"
                >
                  
                
                  <a
                    class="fd-list__link"
                    tabindex="0"
                  >
                    
                  
                    <i
                      class="sap-icon--batch-payments"
                      role="presentation"
                    />
                    
                  
                    <span
                      class="fd-list__title"
                    >
                      Section 4
                    </span>
                    
                
                  </a>
                  
              
                </li>
                
              
                <li
                  aria-level="1"
                  class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                  role="listitem"
                  tabindex="-1"
                >
                  
                
                  <a
                    class="fd-list__link"
                    tabindex="0"
                  >
                    
                  
                    <i
                      class="sap-icon--credit-card"
                      role="presentation"
                    />
                    
                  
                    <span
                      class="fd-list__title"
                    >
                      Section 5
                    </span>
                    
                
                  </a>
                  
              
                </li>
                
            
              </ul>
              
          
            </div>
            
        
          </div>
          
      
        </li>
        
    
      </ul>
      

    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Horizontal Navigation Horizontal Navigation Text Only 1`] = `
<div
  style="height: 200px;"
>
  

  <div
    class="fd-tool-header"
  >
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <img
          alt="SAP"
          class="fd-tool-header__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <h4
          class="fd-title fd-title--h5 fd-tool-header__title"
        >
          Product Name
        </h4>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <label
          class="fd-form-label fd-tool-header__label"
          for="input-1"
        >
          Second Title
        </label>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="search"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--search"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="task"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--circle-task"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="notification"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--bell"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="user menu control"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    class="fd-icon-tab-bar fd-icon-tab-bar--navigation fd-icon-tab-bar--sm"
  >
    
    
    <ul
      class="fd-icon-tab-bar__header"
      role="tablist"
    >
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#"
          id="tab1"
          role="tab"
        >
          
            
          <span
            class="fd-icon-tab-bar__tag"
          >
            Section 1
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item fd-icon-tab-bar__item--multi-click"
        role="presentation"
      >
        
            
        <a
          aria-selected="true"
          class="fd-icon-tab-bar__tab"
          id="tab2"
          role="tab"
          tabindex="0"
        >
          
            
          <span
            class="fd-icon-tab-bar__tag"
          >
            Section 2
          </span>
          
            
        </a>
        

            
        <div
          class="fd-popover fd-icon-tab-bar__popover"
        >
          
            
          <div
            class="fd-popover__control"
          >
            
                
            <div
              class="fd-icon-tab-bar__button-container"
            >
              
                
              <button
                aria-controls="popoverA1"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="open menu button"
                class="fd-button fd-button--transparent fd-button--compact  fd-icon-tab-bar__button"
                onclick="onPopoverClick('popoverA1');"
              >
                
                    
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                
              </button>
              
                
            </div>
            
            
          </div>
          
            
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right fd-icon-tab-bar__popover-body"
            id="popoverA1"
          >
            
                
            <ul
              class="fd-list fd-list--navigation fd-list--no-border fd-icon-tab-bar__list"
              role="list"
            >
              
                
              <li
                aria-level="1"
                class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                role="listitem"
                tabindex="-1"
              >
                
                    
                <a
                  class="fd-list__link"
                  tabindex="0"
                >
                  
                    
                  <span
                    class="fd-list__title"
                  >
                    Subsection 1
                  </span>
                  
                    
                </a>
                
                
              </li>
              
                
              <li
                aria-level="1"
                class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                role="listitem"
                tabindex="-1"
              >
                
                    
                <a
                  class="fd-list__link"
                  tabindex="0"
                >
                  
                    
                  <span
                    class="fd-list__title"
                  >
                    Subsection 2
                  </span>
                  
                    
                </a>
                
                
              </li>
              
                
            </ul>
            
            
          </div>
          
            
        </div>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#"
          id="tab3"
          role="tab"
        >
          
            
          <span
            class="fd-icon-tab-bar__tag"
          >
            Section 3
          </span>
          
            
        </a>
        
        
      </li>
      
    
    </ul>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Horizontal Navigation Horizontal Navigation Text Only Phone View 1`] = `
<div
  style="height: 200px;"
>
  

  <div
    class="fd-tool-header fd-tool-header--sm"
    style="max-width: 500px;"
  >
    
  
    <div
      class="fd-tool-header__group"
    >
      
    
      <div
        class="fd-tool-header__element"
      >
        
      
        <img
          alt="SAP"
          class="fd-tool-header__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        
    
      </div>
      
    
      <div
        class="fd-tool-header__element"
      >
        
      
        <button
          aria-label="mega menu"
          class="fd-button fd-button--transparent fd-button--menu fd-tool-header__button"
        >
          
        
          <i
            class="sap-icon--megamenu"
          />
          
      
        </button>
        
    
      </div>
      
  
    </div>
    
  
    <div
      class="fd-tool-header__group"
    >
      
    
      <div
        class="fd-tool-header__element"
      >
        
      
        <button
          aria-label="more items"
          class="fd-button fd-button--transparent fd-tool-header__button"
        >
          
        
          <i
            class="sap-icon--overflow"
          />
          
      
        </button>
        
    
      </div>
      
    
      <div
        class="fd-tool-header__element"
      >
        
      
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
    
      </div>
      
  
    </div>
    

  </div>
  

  <div
    class="fd-icon-tab-bar fd-icon-tab-bar--sm fd-icon-tab-bar--navigation"
    style="max-width: 500px;"
  >
    
    
    <ul
      class="fd-icon-tab-bar__header"
      role="tablist"
    >
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#"
          id="tab4"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Section 1
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          aria-selected="true"
          class="fd-icon-tab-bar__tab"
          href="#"
          id="tab5"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Section 2
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#"
          id="tab6"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Section 3
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item fd-icon-tab-bar__item--overflow"
        role="presentation"
      >
        
            
        <div
          class="fd-popover fd-icon-tab-bar__popover"
        >
          
                
          <div
            class="fd-popover__control"
          >
            
                    
            <button
              aria-controls="popoverA2"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="open menu button"
              class="fd-icon-tab-bar__overflow"
              onclick="onPopoverClick('popoverA2');"
            >
              
                        
              <span
                class="fd-icon-tab-bar__overflow-text"
              >
                More
              </span>
              
                        
              <i
                class="sap-icon--slim-arrow-down"
                role="presentation"
              />
              
                    
            </button>
            
                
          </div>
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right fd-icon-tab-bar__popover-body"
            id="popoverA2"
          >
            
                
            <ul
              class="fd-list fd-list--navigation fd-list--no-border fd-icon-tab-bar__list"
              role="list"
            >
              
                    
              <li
                aria-level="1"
                class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                role="listitem"
                tabindex="-1"
              >
                
                    
                <a
                  class="fd-list__link"
                  tabindex="0"
                >
                  
                        
                  <span
                    class="fd-list__title"
                  >
                    Section 4
                  </span>
                  
                    
                </a>
                
                    
              </li>
              
                    
              <li
                aria-level="1"
                class="fd-list__item fd-list__item--link fd-icon-tab-bar__list-item"
                role="listitem"
                tabindex="-1"
              >
                
                    
                <a
                  class="fd-list__link"
                  tabindex="0"
                >
                  
                        
                  <span
                    class="fd-list__title"
                  >
                    Section 5
                  </span>
                  
                    
                </a>
                
                    
              </li>
              
                
            </ul>
            
                
          </div>
          
            
        </div>
        
        
      </li>
      
    
    </ul>
    

  </div>
  

</div>
`;
